...
                    AIMarkdownEditingDemo()
                        .navigationBarTitleDisplayMode(.inline)
                        .ignoresSafeArea()
                }
                
                if #available(iOS 17.0, *) {
                    NavigationLink("SwiftUI API Demo") {
                        APIDemo()
                            .navigationBarTitleDisplayMode(.inline)
                    }
                    
                    NavigationLink("Editing State Demo") {
                        EditingStateDemo()
...
